--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webjobfinal",
   "version": "1.0.0",
   "description": "Final Project By Jirawat\r Backend nodejs\r Frontend booststrap5",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./bin/www"
