update login not finish

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ DB_User = root
 DB_Password = 
 DB_Name = projectweb
 DB_Port = 3307
+JWT_SECRET = fanrokangir2gmp3wmgp93t409-09q0t9-q0it-0990-90-9()(0kp[o])
+JWT_EXPIRES = 90d
+COOKIE_EXPIRES = 
