--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ DB_Name = projectweb
 DB_Port = 3307
 JWT_SECRET = fanrokangir2gmp3wmgp93t409-09q0t9-q0it-0990-90-9()(0kp[o])
 JWT_EXPIRES = 1h
-COOKIE_EXPIRES = 
+COOKIE_EXPIRES = 90
