--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mysql2": "^3.5.2",
     "nodemailer": "^6.9.4",
     "nodemon": "^2.0.22",
+    "randomstring": "^1.3.0",
     "uuid": "^9.0.0"
   }
 }
